--- a/all.css
+++ b/all.css
@@ -1,5 +1,7 @@
 :root {
 	--n-border-radius: var(--border-radius, 4px);
+	--n-line: var(--line, 1.65);
+	--n-line-em: calc(var(--n-line) * 1em);
 }
 
 @import "./util";
