--- a/website/css/main.css
+++ b/website/css/main.css
@@ -5,18 +5,24 @@ body {
 	margin: 0 auto;
 	font-family: Nunito, Avenir, sans-serif;
 }
+html {
+	background-image: linear-gradient(to bottom, #ebebeb 5%, rgba(225, 225, 225, 0) 5%);
+	background-size: 100% 26.4px;
+	background-position: left top;
+}
 @media screen and (min-width: 70em) {
-	body {
-		width: 85%;
-	}
-	& > section > p, & > section > ul {
-		width: 70%;
-	}
+	body { width: 85%; }
+	& > section > p, & > section > ul { width: 70%; }
 }
 body > footer {
 	color: gray;
-	margin: 3em 0;
+	margin: 2.6em 0;
 	font-size: 0.8em;
+}
+pre {
+	line-height: var(--n-line) !important;
+	margin: 1.5em 0 0 !important;
+	padding: calc(var(--n-line-em) / 2) 0.5em !important;
 }
 pre, code {
 	font-family: Inconsolata, monospace !important;
@@ -52,7 +58,7 @@ a:hover, a:focus { color: color(red tint(15%)); }
 	color: color(white shade(10%) alpha(0.5));
 	font-size: 2em;
 	letter-spacing: 0.4em;
-	padding: 1em;
+	padding: 1.59rem 2px;
 	text-align: center;
 	flex: 1;
 	overflow: hidden;
@@ -61,50 +67,32 @@ a:hover, a:focus { color: color(red tint(15%)); }
 .grid-demo-content {
 	background: color(yellow tint(50%) alpha(0.9));
 	text-align: center;
-	padding: 0.5em;
-	margin: 0.5em;
+	padding: calc(var(--n-line-em) / 2);
+	margin: @padding;
 	font-size: var(--delta);
 }
-.grid-example {
-	inherit: %grid;
-}
-& > * {
-	background: color(purple tint(60%) alpha(0.4));
-}
-& > *:nth-child(odd) {
-	background: color(purple tint(60%) alpha(0.2));
-}
+.grid-example { inherit: %grid; }
+& > *                { background: color(purple tint(60%) alpha(0.4)); }
+& > *:nth-child(odd) { background: color(purple tint(60%) alpha(0.2)); }
 @media screen and (min-width: 38em) {
 	.grid-example {
 		inherit: %grid-flex;
-		margin: 1em 0;
+		margin: calc(var(--n-line-em) / 2) 0;
 	}
-	& > * {
-		padding: 0 0.6em;
-	}
-	& > .demo-two-of-three {
-		flex: 0 0 66.66666%;
-	}
-	& > .demo-two-of-four {
-		flex: 0 0 50%;
-	}
+	& > * { gutter: 0.6em; }
+	& > .demo-two-of-three { span: 2 of 3; }
+	& > .demo-two-of-four { span: 2 of 4; }
 }
 
-.grid-codez {
-	inherit: %grid;
-}
+.grid-codez { inherit: %grid; }
 @media screen and (min-width: 70em) {
-	.grid-codez {
-		inherit: %grid-flex;
-	}
-	& > * {
-		padding: 0 0.4em;
-	}
+	.grid-codez { inherit: %grid-flex; }
+	& > * { gutter: 0.4em; }
 }
 
 .feed-post {
 	inherit: %media-object;
-	margin-top: 1em;
+	margin-top: var(--n-line-em);
 }
 & img {
 	inherit: %round;
@@ -177,15 +165,17 @@ a:hover, a:focus { color: color(red tint(15%)); }
 	button-style: bgcolor(white) fgcolor(teal shade(30%)) borderonly;
 }
 
+.form-web-search {
+	margin-top: 0.5em;
+}
+
 .form-search label {
 	inherit: %input-addons;
 	inherit: %input-addons-rounded;
-	margin-bottom: 1em;
 }
 
 .form-password label {
 	inherit: %input-addons;
-	margin-bottom: 1em;
 }
 & input {
 	border-color: teal;
@@ -242,7 +232,8 @@ a:hover, a:focus { color: color(red tint(15%)); }
 	}
 }
 
-.small-forms form { margin: 1em; }
+.small-forms { margin-bottom: 1.35em; }
+& form { margin: var(--n-line-em); }
 @media screen and (min-width: 43em) {
 	.small-forms {
 		display: flex;
@@ -282,6 +273,7 @@ a:hover, a:focus { color: color(red tint(15%)); }
 
 .table-frameworks {
 	inherit: %table-striped;
+	margin-top: var(--n-line-em);
 }
 @media screen and (max-width: 40em) {
 	.table-frameworks {
@@ -303,11 +295,15 @@ a:hover, a:focus { color: color(red tint(15%)); }
 .alert-error {
 	alert: color(red);
 	border-width: 2px;
+	margin-bottom: -2px;
 }
 .alert-info {
 	alert: color(yellow);
 }
 
+.triangle-wrapper {
+	height: calc(var(--n-line-em) * 3);
+}
 .demo-triangle-left {
 	triangle: left;
 }
