--- a/alerts.css
+++ b/alerts.css
@@ -2,6 +2,7 @@
 
 %alert-base {
 	inherit: %clearfix;
+	inherit: %content;
 	padding: 1.6888em 2em 1.55em 1.2em;
 	margin-top: var(--n-line-em);
 	border: 1px solid;
