--- a/forms.css
+++ b/forms.css
@@ -15,10 +15,14 @@
 	margin: 0.555em 0 0;
 }
 
-%form-element {
+%padded-like-input {
 	display: inline-block;
-	padding: 0.65em 0.6em;
+	padding: 0.6em;
 	line-height: normal;
+}
+
+%form-element {
+	inherit: %padded-like-input;
 	background: white;
 	border: silver 1px solid;
 	border-radius: var(--n-border-radius);
@@ -71,7 +75,7 @@
 }
 
 %form-grouped fieldset {
-	margin: 0 0 var(--n-line-em);
+	margin: -2px 0 var(--n-line-em);
 	border: none;
 	border-radius: var(--n-border-radius);
 	padding: 0;
@@ -102,24 +106,28 @@
 %form-stacked label {
 	display: block;
 	margin: -2px 0 0;
-	padding: 0 0 0.7em;
+	padding: 0 0 calc(var(--n-line-em) / 2);
 }
 
-%form-stacked > button {
-	margin: 0.7em 0;
+& > * {
+	margin: 0.325em 0 0.25em;
 }
 
-%form-aligned label > * {
-	flex: 0 0 70%;
-	margin-left: 1em;
-}
-
-%form-aligned > label {
+%form-aligned label {
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-	margin: 0.825em 0 0;
-	padding: 0.2em 0;
+	margin: calc(var(--n-line-em) / 2) 0 0;
+	padding: calc(var(--n-line-em) / 4) 0;
+}
+
+&:last-of-type {
+	margin-bottom: calc(var(--n-line-em) / 4);
+}
+
+& > * {
+	flex: 0 0 70%;
+	margin: 0 0 0 1em;
 }
 
 %align-without-label {
@@ -128,7 +136,7 @@
 
 %form-aligned > button {
 	inherit: %align-without-label;
-	margin-top: 0.7em;
+	margin-top: calc(var(--n-line-em) / 2);
 }
 
 %input-addons {
@@ -142,10 +150,9 @@
 }
 
 %input-addons span, %input-addons button {
+	inherit: %padded-like-input;
 	border: silver 1px solid;
 	background: color(silver alpha(0.5));
-	display: inline-block;
-	padding: 0.5em 0.6em;
 }
 
 %input-addons > * {
