--- a/grids.css
+++ b/grids.css
@@ -13,15 +13,65 @@
 	max-width: 100%;
 }
 
-%grid-flex {
-	flex-flow: row nowrap;
-}
-
 %grid-flex > * {
 	flex: 1 1 auto;
-	word-wrap: break-word;
-	word-break: break-all;
 }
+
+%grid-flex-2     { inherit: %grid-flex;   }
+%grid-flex-2 > * { width: calc(100% / 2); }
+%grid-flex-2 > *:nth-child(2n+1):nth-last-child(1) { width: calc(100% / 1); } & ~ * { width: calc(100% / 1); }
+%grid-flex-2 > *:nth-child(2n+1):nth-last-child(2) { width: calc(100% / 2); } & ~ * { width: calc(100% / 2); }
+
+%grid-flex-3     { inherit: %grid-flex;   }
+%grid-flex-3 > * { width: calc(100% / 3); }
+%grid-flex-3 > *:nth-child(3n+1):nth-last-child(1) { width: calc(100% / 1); } & ~ * { width: calc(100% / 1); }
+%grid-flex-3 > *:nth-child(3n+1):nth-last-child(2) { width: calc(100% / 2); } & ~ * { width: calc(100% / 2); }
+%grid-flex-3 > *:nth-child(3n+1):nth-last-child(3) { width: calc(100% / 3); } & ~ * { width: calc(100% / 3); }
+
+%grid-flex-4     { inherit: %grid-flex;   }
+%grid-flex-4 > * { width: calc(100% / 4); }
+%grid-flex-4 > *:nth-child(4n+1):nth-last-child(1) { width: calc(100% / 1); } & ~ * { width: calc(100% / 1); }
+%grid-flex-4 > *:nth-child(4n+1):nth-last-child(2) { width: calc(100% / 2); } & ~ * { width: calc(100% / 2); }
+%grid-flex-4 > *:nth-child(4n+1):nth-last-child(3) { width: calc(100% / 3); } & ~ * { width: calc(100% / 3); }
+%grid-flex-4 > *:nth-child(4n+1):nth-last-child(4) { width: calc(100% / 4); } & ~ * { width: calc(100% / 4); }
+
+%grid-flex-5     { inherit: %grid-flex;   }
+%grid-flex-5 > * { width: calc(100% / 5); }
+%grid-flex-5 > *:nth-child(5n+1):nth-last-child(1) { width: calc(100% / 1); } & ~ * { width: calc(100% / 1); }
+%grid-flex-5 > *:nth-child(5n+1):nth-last-child(2) { width: calc(100% / 2); } & ~ * { width: calc(100% / 2); }
+%grid-flex-5 > *:nth-child(5n+1):nth-last-child(3) { width: calc(100% / 3); } & ~ * { width: calc(100% / 3); }
+%grid-flex-5 > *:nth-child(5n+1):nth-last-child(4) { width: calc(100% / 4); } & ~ * { width: calc(100% / 4); }
+%grid-flex-5 > *:nth-child(5n+1):nth-last-child(5) { width: calc(100% / 5); } & ~ * { width: calc(100% / 5); }
+
+%grid-flex-6     { inherit: %grid-flex;   }
+%grid-flex-6 > * { width: calc(100% / 6); }
+%grid-flex-6 > *:nth-child(6n+1):nth-last-child(1) { width: calc(100% / 1); } & ~ * { width: calc(100% / 1); }
+%grid-flex-6 > *:nth-child(6n+1):nth-last-child(2) { width: calc(100% / 2); } & ~ * { width: calc(100% / 2); }
+%grid-flex-6 > *:nth-child(6n+1):nth-last-child(3) { width: calc(100% / 3); } & ~ * { width: calc(100% / 3); }
+%grid-flex-6 > *:nth-child(6n+1):nth-last-child(4) { width: calc(100% / 4); } & ~ * { width: calc(100% / 4); }
+%grid-flex-6 > *:nth-child(6n+1):nth-last-child(5) { width: calc(100% / 5); } & ~ * { width: calc(100% / 5); }
+%grid-flex-6 > *:nth-child(6n+1):nth-last-child(6) { width: calc(100% / 6); } & ~ * { width: calc(100% / 6); }
+
+%grid-flex-7     { inherit: %grid-flex;   }
+%grid-flex-7 > * { width: calc(100% / 7); }
+%grid-flex-7 > *:nth-child(7n+1):nth-last-child(1) { width: calc(100% / 1); } & ~ * { width: calc(100% / 1); }
+%grid-flex-7 > *:nth-child(7n+1):nth-last-child(2) { width: calc(100% / 2); } & ~ * { width: calc(100% / 2); }
+%grid-flex-7 > *:nth-child(7n+1):nth-last-child(3) { width: calc(100% / 3); } & ~ * { width: calc(100% / 3); }
+%grid-flex-7 > *:nth-child(7n+1):nth-last-child(4) { width: calc(100% / 4); } & ~ * { width: calc(100% / 4); }
+%grid-flex-7 > *:nth-child(7n+1):nth-last-child(5) { width: calc(100% / 5); } & ~ * { width: calc(100% / 5); }
+%grid-flex-7 > *:nth-child(7n+1):nth-last-child(6) { width: calc(100% / 6); } & ~ * { width: calc(100% / 6); }
+%grid-flex-7 > *:nth-child(7n+1):nth-last-child(7) { width: calc(100% / 7); } & ~ * { width: calc(100% / 7); }
+
+%grid-flex-8     { inherit: %grid-flex;   }
+%grid-flex-8 > * { width: calc(100% / 8); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(1) { width: calc(100% / 1); } & ~ * { width: calc(100% / 1); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(2) { width: calc(100% / 2); } & ~ * { width: calc(100% / 2); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(3) { width: calc(100% / 3); } & ~ * { width: calc(100% / 3); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(4) { width: calc(100% / 4); } & ~ * { width: calc(100% / 4); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(5) { width: calc(100% / 5); } & ~ * { width: calc(100% / 5); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(6) { width: calc(100% / 6); } & ~ * { width: calc(100% / 6); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(7) { width: calc(100% / 7); } & ~ * { width: calc(100% / 7); }
+%grid-flex-8 > *:nth-child(8n+1):nth-last-child(8) { width: calc(100% / 8); } & ~ * { width: calc(100% / 8); }
 
 @macro gutter {
 	padding: 0 $1;
